[tool.poetry]
name = "prizebond_app"
version = "0.1.0"
description = "Prizebond Checking pipeline"
authors = ["Mahir Labib Chowdhury"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
