[tool.poetry]
name = "prizebond_app"
version = "0.1.0"
description = "Prizebond Checking pipeline"
authors = ["Mahir Labib Chowdhury"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^2.5.0"
ipython = "^8.4.0"
requests = "^2.28.1"
Django = "^4.0.6"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
django-extensions = "^3.2.0"
gunicorn = "^20.1.0"
django-allauth = "^0.51.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
mypy = "^0.961"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
